# rust_enrollment_remote

./: .env.example  .gitignore  Cargo.toml
apps/admin/: .env.example  README.md  index.html  package-lock.json  package.json
apps/admin/src/: App.tsx  index.css
apps/admin/src/api/: admin.ts  client.ts
apps/admin/src/data/: mock.ts
apps/admin/src/types/: admin.ts
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/web/app/: layout.tsx
apps/web/app/chat/: page.tsx
apps/web/components/: chat-transcript.tsx  formatted-message.tsx  use-chat-session.ts
apps/web/components/digital-human/: pcm-audio-player.ts  use-tts.ts  use-voice-playback.ts
apps/web/lib/: api-client.ts
apps/web/tests/: formatted-message.test.ts
crates/admissions_agent/: Cargo.toml
crates/admissions_agent/src/: lib.rs
crates/db/src/: lib.rs
crates/domain/src/: lib.rs
crates/embeddings/src/: lib.rs
crates/eval_harness/fixtures/: chat-context-regression-v2-cases.json  chat-context-regression-v5-cases.json  chat-context-regression-v6-cases.json
crates/eval_harness/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/retrieval/src/: lib.rs
data/: extracted_faq_candidates_校训与冰雪雕塑专业介绍.json  faq_needs_review_校训与冰雪雕塑专业介绍.json  faq_ready_校训与冰雪雕塑专业介绍.enriched.json  faq_ready_校训与冰雪雕塑专业介绍.json  faq_ready_校训与冰雪雕塑专业介绍.normalized.json  四、校训与冰雪雕塑专业介绍.json
docs/: admin-backend-integration-plan.md  admin-cloudflare-access-runbook.md  cosyvoice-fp16-test-runbook-20260610.md  hong-kong-reverse-tunnel-runbook.md  model-switching-and-tts-troubleshooting.md  ops-handoff-current-state.md  public-access-and-voice-ops-20260608.md
scripts/: prune-audio-cache.sh
