[workspace]
members = [
  "apps/api",
  "crates/domain",
  "crates/db",
  "crates/llm",
  "crates/embeddings",
  "crates/retrieval",
  "crates/probability",
  "crates/agent_runtime",
  "crates/admissions_agent",
  "crates/eval_harness",
  "crates/importers",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid", "bigdecimal"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
wiremock = "0.6"
insta = { version = "1.41", features = ["json"] }

domain = { path = "crates/domain" }
db = { path = "crates/db" }
llm = { path = "crates/llm" }
embeddings = { path = "crates/embeddings" }
retrieval = { path = "crates/retrieval" }
probability = { path = "crates/probability" }
agent_runtime = { path = "crates/agent_runtime" }
admissions_agent = { path = "crates/admissions_agent" }
eval_harness = { path = "crates/eval_harness" }
importers = { path = "crates/importers" }
