[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
admissions_agent = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
calamine = { workspace = true }
db = { workspace = true }
domain = { workspace = true }
dotenvy = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
