[package]
name = "admissions_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_runtime = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
db = { workspace = true }
domain = { workspace = true }
futures = { workspace = true }
llm = { workspace = true }
probability = { workspace = true }
retrieval = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
